# business-essentials

./: README.md
backend/: CMakeLists.txt  main.cpp
backend/config/mongoose/: JsonController.h  JsonResponse.cpp  JsonResponse.h
backend/net/: IJsonDeserializer.h  IJsonSerializer.h  StaticJsonSerializer.h
backend/net/request/: LoginRequest.h  RegisterRequest.h
backend/net/response/: LoginResponse.h  RegisterResponse.h  Response.h
frontend/: package-lock.json  package.json
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/components/blog/: blog.component.css  blog.component.html  blog.component.ts
frontend/src/app/components/dropdown-navigation-items/: dropdown-navigation-items.component.css  dropdown-navigation-items.component.html  dropdown-navigation-items.component.spec.ts  dropdown-navigation-items.component.ts
frontend/src/app/components/footer/: footer.component.css  footer.component.html  footer.component.ts
frontend/src/app/components/header/: header.component.css  header.component.html  header.component.ts
frontend/src/app/components/main-image/: main-image.component.css  main-image.component.html  main-image.component.ts
frontend/src/app/components/main-navigation/: main-navigation.component.css  main-navigation.component.html  main-navigation.component.ts
frontend/src/app/components/search-bar/: search-bar.component.css  search-bar.component.html  search-bar.component.ts
frontend/src/app/components/user-information-card/: user-information-card.component.css  user-information-card.component.html  user-information-card.component.spec.ts  (+1 more)
frontend/src/app/domain/: Article.ts  RouteDisplay.ts  SummaryCardDisplay.ts
frontend/src/app/service/: login.service.ts  register.service.ts
(+38 files in other folders)
